--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .container{
   width: 100%;
   height: 100vh;
-  background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(PHOTO/background.png) ;
+  background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(/background.png) ;
   background-position: center;
   background-size: cover;
   padding-left: 8%;
@@ -92,7 +92,7 @@ button{
   box-sizing: border-box;
   cursor:pointer;
   margin: 10px 15px;
-  background-image: url(PHOTO/pic-1.png);
+  background-image: url(/pic-1.png);
   background-position: center;
   background-size: cover;
 }
@@ -105,7 +105,7 @@ button{
   box-sizing: border-box;
   cursor:pointer;
   margin: 10px 15px;
-  background-image: url(PHOTO/pic-2.png);
+  background-image: url(/pic-2.png);
   background-position: center;
   background-size: cover;
 }
@@ -118,7 +118,7 @@ button{
   box-sizing: border-box;
   cursor:pointer;
   margin: 10px 15px;
-  background-image: url(PHOTO/pic-3.png);
+  background-image: url(/pic-3.png);
   background-position: center;
   background-size: cover;
 }
@@ -131,7 +131,7 @@ button{
   box-sizing: border-box;
   cursor:pointer;
   margin: 10px 15px;
-  background-image: url(PHOTO/pic-4.png);
+  background-image: url(/pic-4.png);
   background-position: center;
   background-size: cover;
 }
